<resources>
    <string name="PopPermissions">Basic services will still be provided, but you will not be able to pop up boxes outside the app.</string>
    <string name="PopPermissions_negative">Later</string>
    <string name="PopPermissions_title">Warning</string>
    <string name="ab_battery_low">The update will be installed automatically when the battery is charged to more than %1$d%%</string>
    <string name="ab_connect_fail">Connect reboot fail</string>
    <string name="ab_install_fail">Install fail</string>
    <string name="ab_install_notice">The whole process takes a longer time.\nPlease do not force restart or shut down the phone to avoid affecting the upgrade.\nThe update process will be performed in the background, you can continue to use your phone normally until the update is successful and you are prompted to restart.</string>
    <string name="ab_install_success">Install successfully</string>
    <string name="ab_installing">Installing</string>
    <string name="ab_isnatll_fail_reason">Reason：</string>
    <string name="ab_parms_illegal">Incorrect upgrade package parameter</string>
    <string name="ab_reboot_now">Restart immediately</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_wireless_update">About System Update</string>
    <string name="agree">AGREE</string>
    <string name="analysis">App Analysis</string>
    <string name="app_name">System Update</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="battery_remove_title">Warning</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_download">Download and install</string>
    <string name="btn_ignore">Ignore</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>
    <string name="button_click_toast">Click too fast, Please try again later.</string>
    <string name="call_warn">Software update download will not be available during the call</string>
    <string name="cancel_download_content">This operation will delete the downloaded file.</string>
    <string name="cancel_download_negative_btn">No</string>
    <string name="cancel_download_positive_btn">Yes</string>
    <string name="cancel_download_title">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_now">Check for updates</string>
    <string name="close">CLOSE</string>
    <string name="content">Choose to help improve your app by sharing its activity and crash-related data.</string>
    <string name="current_version_text">Current:</string>
    <string name="default_web_client_id">1075259712158-1uf4b7rgkpsfdioeuglro5uh6r3g44u2.apps.googleusercontent.com</string>
    <string name="dialog_auto_install">System will be updated automatically when device is in standby mode.\nThe update will not harm your personaldata. Please note.</string>
    <string name="dialog_title">Attention</string>
    <string name="download_completed_text">Download complete, please click to install</string>
    <string name="download_progress">Progress rate:</string>
    <string name="empty_directory">No zip files in this folder!</string>
    <string name="export_data">Download log file</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="firebase_database_url">https://fotafcm.firebaseio.com</string>
    <string name="gcm_defaultSenderId">1075259712158</string>
    <string name="google_api_key">AIzaSyBf7igZt1z-xbfmQaZrXnKrkqLHEjZL6zE</string>
    <string name="google_app_id">1:1075259712158:android:eee7c06ef0190094</string>
    <string name="google_crash_reporting_api_key">AIzaSyBf7igZt1z-xbfmQaZrXnKrkqLHEjZL6zE</string>
    <string name="google_storage_bucket">fotafcm.appspot.com</string>
    <string name="guest_hint">It is Guest mode now, and System Update is not available in this mode.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="htmlstring_code_end">&lt;/span&gt;&lt;br/&gt;&lt;/div&gt;</string>
    <string name="htmlstring_code_head">&lt;div style=\'font-size:14px;color:#8e8e8e;\'&gt;&lt;span style=\'word-break:break-all\'&gt;</string>
    <string name="htmlstring_version">&lt;div style=\'font-size:16px;color:#303030;\'&gt;&lt;span style=\'word-break:break-all\'&gt;</string>
    <string name="htmlstring_version_end">&lt;/span&gt;&lt;br/&gt;</string>
    <string name="inner_sdcard">Internal storage</string>
    <string name="match_imei">IMEI is illegal</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="network_error">Network connection failed</string>
    <string name="new_to_upgrade">You have a new version to install</string>
    <string name="new_version_query">Checking for updates…</string>
    <string name="new_version_text">New version</string>
    <string name="no_new_version">Your device\'s software is currently up to date.</string>
    <string name="not_support_fota_title">Warning</string>
    <string name="not_support_version">FOTA is not supported on this device!</string>
    <string name="notification_content_newversion">A new version is available.</string>
    <string name="notification_content_title">System Software Update</string>
    <string name="option_exit">Exit</string>
    <string name="option_file_select">Local updates</string>
    <string name="option_settings">Settings</string>
    <string name="ota_battery_low">The current power is less than %d%%, please charge!</string>
    <string name="ota_device_rooted_content">Root has been detected, can not update the device!</string>
    <string name="ota_full_rom_check">Check</string>
    <string name="ota_no_wifi_tip">Wi-Fi is not available now, would you like to download update via mobile data?</string>
    <string name="ota_notify_download_pause_content">Download has been paused, click to continue</string>
    <string name="ota_optional_full_check">Check for full update</string>
    <string name="ota_toast_no_network">Network is not available</string>
    <string name="ota_wifi_setting">Wi-Fi Settings</string>
    <string name="out_sdcard">SD card</string>
    <string name="package_error_message_invalid">Package error. Please check update and download again.</string>
    <string name="package_error_title">Installation Failed</string>
    <string name="package_unzip">Unzipping the package file, please do not interrupt…</string>
    <string name="package_unzip_error">Unzip error</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pop_install_schedule1">1 hour later</string>
    <string name="pop_install_schedule2">4 hours later</string>
    <string name="pop_install_schedule3">8 hours later</string>
    <string name="post_pro">%</string>
    <string name="project_id">fotafcm</string>
    <string name="reboot">Rebooting...</string>
    <string name="remind_last_time">Remind again</string>
    <string name="sdCard_update_tips_content"> &lt;div style=\"font-size:13px;color:#4c4c4c\"&gt;&lt;p&gt;1. Please make sure the selected file is official;&lt;/p&gt;\n                                &lt;p&gt;2. Local Update may wipe your data, please backup before updating;&lt;/p&gt;\n                                &lt;p&gt;3. Install the wrong update file will damage your device;&lt;/p&gt;\n                                &lt;p&gt;4. Click [Update now] button, your device will enter into the Recovery Mode. Please do not remove the battery and do nothing until the update has been completed.&lt;/p&gt;&lt;/div&gt;   </string>
    <string name="setting_autocheck">Automatically check for update</string>
    <string name="setting_autocheck_hint">Set the cycle to check for update automatically</string>
    <string name="setting_autodownload">Allow automatic download over Wi-Fi network</string>
    <string name="setting_autodownload_hint">Update packages will be downloaded automatically</string>
    <string name="setting_only_wifi">Updates via Wi-Fi only</string>
    <string name="setting_only_wifi_hint">Download update packages over Wi-Fi network only</string>
</resources>